Fri Mar 17 19:10:41 1995  John Gilmore  (gnu at toad.com)

	* krb5.h:  Move <sys/types> and u_long (etc) code to krb5/k5-config.h.
	It is needed there when NEED_SOCKETS is defined.
	* Makefile.in (all-mac, clean-mac):  Add.

Wed Mar 15 20:27:57 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: added recursion into krb5 for the PC.

Fri Mar 10 10:18:50 1995  Chris Provenzano (proven@mit.edu)

	* krb5.h Added empty structure declaration of krb5_auth_context.

	* k5-int.h Moved #include "adm_defs.h" to krb5.h

Thu Mar  2 23:24:00 1995  John Gilmore  (gnu at toad.com)

	Make include files begin to work on the Macintosh.

	* k5-int.h:  Remove krb5/ from #includes.  Rearrange #includes
	so that time_t is defined before kdb.h is included.
	* krb5.h:  Include k5-config.h first, so its #define's can
	control the rest of the file.  If <sys/types.h> is not present,
	define u_long, etc, manually.

Wed Feb 22 18:31:12 1995  John Gilmore  (gnu at toad.com)

	* k5-int.h:  Remove commented-out <widen.h> and <narrow.h>.
	* krb5.h: Same as old krb5/krb5.h, as a start.  Gradually things
	that don't need to be exported will be moved from krb5.h into
	k5-int.h (and vice verse for e.g. function prototypes).

Wed Jan 25 19:19:38 1995  John Gilmore  (gnu at toad.com)

	Make it possible to #include "..." without using slashes,
	for Macintosh support.

	* krb5.h:  New file, the externally visible interface to
	Kerberos V5.  Currently the whole kitchen sink, to bootstrap.
	* k5-int.h:  New file, the internally visible declarations
	needed by source files that are part of the Kerberos V5 library
	itself.  Currently the same whole kitchen sink, to bootstrap.

Fri Nov 18 00:16:31 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use WITH_CCOPTS.
